src/objects/QFlowCustomerIntegration__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>referenced by the EISCustomerQueue class logic</description>
    <fields>
        <fullName>EndPoint__c</fullName>
        <label>EndPoint</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>QFlowCustomerIntegration</label>
</CustomObject>